[gd_scene load_steps=8 format=2]

[ext_resource path="res://CellObjects/CellObject.gd" type="Script" id=1]
[ext_resource path="res://icon.png" type="Texture" id=2]
[ext_resource path="res://CellObjects/turret.png" type="Texture" id=3]
[ext_resource path="res://CellObjects/shield.png" type="Texture" id=4]
[ext_resource path="res://CellObjects/dynamite.png" type="Texture" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 32, 32 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": false,
"name": "CellObject",
"speed": 0.0
}, {
"frames": [ ExtResource( 4 ) ],
"loop": false,
"name": "Shield",
"speed": 0.0
}, {
"frames": [ ExtResource( 3 ) ],
"loop": false,
"name": "Turret",
"speed": 0.0
}, {
"frames": [ ExtResource( 5 ) ],
"loop": false,
"name": "Dynamite",
"speed": 0.0
} ]

[node name="CellObject" type="Node2D"]
script = ExtResource( 1 )

[node name="CellObjectArea" type="Area2D" parent="."]
position = Vector2( 48, -48 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="CellObjectArea"]
position = Vector2( -48, 48 )
shape = SubResource( 1 )

[node name="Objects" type="AnimatedSprite" parent="."]
frames = SubResource( 2 )
animation = "CellObject"

[node name="TurretBulletTimer" type="Timer" parent="."]
wait_time = 2.0
[connection signal="area_entered" from="CellObjectArea" to="." method="_on_MouseArea_area_entered"]
[connection signal="mouse_entered" from="CellObjectArea" to="." method="_on_MouseArea_mouse_entered"]
[connection signal="mouse_exited" from="CellObjectArea" to="." method="_on_MouseArea_mouse_exited"]
[connection signal="timeout" from="TurretBulletTimer" to="." method="_on_TurretBulletTimer_timeout"]
